--- a/SistemaLaObra/SistemaLaObra/Properties/Resources.resx
+++ b/SistemaLaObra/SistemaLaObra/Properties/Resources.resx
@@ -517,4 +517,13 @@
   <data name="cuentaCorrienteGris_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cuentaCorrienteGris_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="empresaGris_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\empresaGris_128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="empresaGris_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\empresaGris_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="empresaGris_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\empresaGris_64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
