--- a/SistemaLaObra/SistemaLaObra/Properties/Resources.resx
+++ b/SistemaLaObra/SistemaLaObra/Properties/Resources.resx
@@ -526,4 +526,13 @@
   <data name="empresaGris_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\empresaGris_64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="eliminar_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\eliminar_128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="eliminar_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\eliminar_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="eliminar_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\eliminar_64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
